# House-Price-Prediction-Machine-Learning-Course-Project

./: .gitignore  ProjectDesign.md  README.md  pyproject.toml  requirements.txt
reports/: model_results.csv  training_summary.json
scripts/: check_env.py
src/house_price_ml/: __init__.py  __main__.py  config.py  data.py  models.py  pipeline.py  reporting.py
tests/: test_config.py  test_pipeline.py
